modif front flux

--- a/src/awebapp/templates/reviews/create-review-ticket.html
+++ b/src/awebapp/templates/reviews/create-review-ticket.html
@@ -20,7 +20,7 @@
 <div style="border: 2px solid white; margin: 20px">
     <h4 style="text-align: center">Créer une critique</h4>
         <h5>Vous êtes en train de poster en réponse à</h5>
-        <div style="border: 2px solid black; margin: 20px">
+        <div style="border: 2px solid white; margin: 20px">
             {{ ticket.user }} a demandé une critique<br>
             {{ ticket.title }}<br>
             {{ ticket.description }}<br>
