--- a/src/awebapp/templates/reviews/update-review.html
+++ b/src/awebapp/templates/reviews/update-review.html
@@ -20,7 +20,7 @@
     <main role="main" class="container">
       <div class="row" align="center">
     <h4 style="text-align: center">Bienvenue sur la page de modification de review !</h4>
-    <div style="border: 2px solid black; margin: 20px">
+    <div style="border: 2px solid white; margin: 20px">
         <div>
             <h5>! Vous êtes en train de modifier votre critique !</h5>
             <div style="border: 2px solid white; margin: auto">
