--- a/src/awebapp/templates/reviews/update-ticket.html
+++ b/src/awebapp/templates/reviews/update-ticket.html
@@ -20,7 +20,7 @@
     <main role="main" class="container">
       <div class="row" align="center">
     <h4 style="text-align: center">Modifier votre ticket</h4>
-    <div style="border: 2px solid black; margin: 20px">
+    <div style="border: 2px solid white; margin: 20px">
         <div>
             <h5>Vous êtes en train de poster en réponse à:</h5>
             <div style="border: 1px solid white; margin: 30px">
