--- a/src/awebapp/templates/reviews/create-review-ticket.html
+++ b/src/awebapp/templates/reviews/create-review-ticket.html
@@ -17,12 +17,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>{% block title %}LITReview critiques{% endblock %}</title>
   </head>
-<div style="border: 2px solid white; margin: 20px">
+<div class="col p-3" style="border-radius: 5px; border: 2px solid white; margin: 20px">
     <h4 style="text-align: center">Créer une critique</h4>
         <h5>Vous êtes en train de poster en réponse à</h5>
-        <div style="border: 2px solid white; margin: 20px">
-            {{ ticket.user }} a demandé une critique<br>
-            {{ ticket.title }}<br>
+            <div class="col p-3" style="border-radius: 10px; border: 2px solid white; background-color: white">
+            <p>{{ ticket.user }} a demandé une critique</p><br>
+            <h5>{{ ticket.title }}</h5><br>
             {{ ticket.description }}<br>
             <img src="{{ ticket.image.url }}" widht="200px" height="200px"><br>
             {{ ticket.time_created }}<br>
@@ -30,7 +30,7 @@
         <hr>
         <form method="post">
             {% csrf_token %}
-            <div>
+            <div class="col p-3" style="background-color: #4178D0; border-radius: 5px; border: 2px solid white; margin: 20px">
                 <div>
                     <h5>Titre</h5>
                     <input name="headline" id="title_review">
@@ -56,7 +56,7 @@
                     <h5>Commentaire</h5>
                     <textarea name="body" id="comment" rows="4" cols="50"></textarea>
                 </div>
-                <button class="btn btn-primary">Envoyer</button>
+                <button class="btn btn-secondary">Envoyer</button>
             </div>
         </form>
     </div>
