blocage modif dont save

--- a/src/awebapp/templates/awebapp/baselog.html
+++ b/src/awebapp/templates/awebapp/baselog.html
@@ -22,7 +22,7 @@
             <a class="nav-link active" aria-current="page" href ="http://127.0.0.1:8000/awebapp/logout">Se déconnecter</a>
           </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/">Flux</a>
+              <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/"><strong>Flux</strong></a>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/posts/">Posts</a>
             </li>
