--- a/src/awebapp/templates/awebapp/base.html
+++ b/src/awebapp/templates/awebapp/base.html
@@ -21,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/homepage/">Home</a>
             <li class="nav-item">
               {% if user.is_authenticated %}
-              <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/">Flux</a>
+              <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/awebapp/flux/"><strong>Flux</strong></a>
               <li class="nav-item">
                 <a class="nav-link" href="http://127.0.0.1:8000/awebapp/logout/">Se déconnecter</a>
             </li>
