--- a/src/awebapp/templates/reviews/update-review.html
+++ b/src/awebapp/templates/reviews/update-review.html
@@ -14,36 +14,20 @@
     <link rel="stylesheet" type="text/css" href="{% static 'awebapp/belognav.css' %}">
     <!-- mon css fonctionne pas... -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>{% block title %}LITReview Abonnements{% endblock %}</title>
+  <title>{% block title %}LITReview ticket update{% endblock %}</title>
 </head>
 <body>
     <main role="main" class="container">
       <div class="row" align="center">
-    <h4 style="text-align: center">Bienvenue sur la page de modification de review !</h4>
+    <h4 style="text-align: center">Modifier votre review</h4>
     <div style="border: 2px solid white; margin: 20px">
         <div>
-            <h5>! Vous êtes en train de modifier votre critique !</h5>
-            <div style="border: 2px solid white; margin: auto">
-                <h6>{{ review.ticket.user }} a publié une critique</h6><br>
-                <h5 style="color: white;">{{ review.headline }}</h5><br>
-                <label style="color: white;">{{ review.body }}</label><br>
-                <label style="color: yellow;">{{ review.rating }} sur 5</label><br>
-            </div>
-        </div>
-        <br><hr><br>
-        <form  enctype="multipart/form-data" name="update-review" method="post">
-            <div>
-                <label>Titre</label><input name="headline"><br>
-                <label>Commentaire</label><input name="body"><br>
-                </div>
-                {% csrf_token %}
-                <button>Modifier</button>
-            </div>
-        </form>
-        <form  enctype="multipart/form-data" method="post" name="delete">
+        <form enctype="multipart/form-data" method="post" name="delete">
             <div class="form-group">
                 <input type="hidden" name="delete" value="delete">
-                <button class="btn btn-primary" type="submit">Delete</button>
+                {% csrf_token %}
+                <a href="http://127.0.0.1:8000/awebapp/posts/">
+                <button class="btn btn-danger" type="submit">Delete</button>
             </div>
         </form>
     </div>
