--- a/src/awebapp/templates/reviews/update-review.html
+++ b/src/awebapp/templates/reviews/update-review.html
@@ -14,14 +14,43 @@
     <link rel="stylesheet" type="text/css" href="{% static 'awebapp/belognav.css' %}">
     <!-- mon css fonctionne pas... -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>{% block title %}LITReview ticket update{% endblock %}</title>
+  <title>{% block title %}LITReview review update{% endblock %}</title>
 </head>
 <body>
     <main role="main" class="container">
       <div class="row" align="center">
-    <h4 style="text-align: center">Modifier votre review</h4>
-    <div style="border: 2px solid white; margin: 20px">
-        <div>
+        <h4 style="text-align: center">Gestion</h4>
+        <div style="border: 2px solid black; margin: 20px">
+            <div>
+                <h5>Vous êtes en train de modifier:</h5>
+                    <div style="border: 2px solid black; margin: 30px">
+                        {{ review.ticket.user }} a posté une critique<br>
+                        {{ review.ticket.title }}<br>
+                        {{ review.ticket.description }}<br>
+                        <img src="{{ review.ticket.image.url }}" widht="200px" height="200px"><br>
+                    </div>
+                </div>
+                <br><hr><br>
+                <form enctype="multipart/form-data" method="post" name="update">
+                    <div class="form-group">
+                        <div>
+                        <h5>{{ review.headline }}</h5><input name="headline"><br>
+                        <p>{{ review.body }}</p><input name="body"><br>
+                        <img src="{{ review.ticket.image.url }}" widht="200px" height="200px"><br>
+                        {{ form_ticket.image }}<br>
+                        <div class="custom-file">
+                            <input name="image" value="{{ form_ticket.image }}" type="file" class="custom-file-input" id="image">
+                        </div>
+                        <label>Note (0-5): {{ form_review.rating }}<input type="number" min="0" max="5" name="rating"></label>
+                        {{ form_ticket.user.as_hidden }}
+                        </div>
+                        <input type="hidden" name="update" value="update">
+                        {% csrf_token %}
+                        <a href="http://127.0.0.1:8000/awebapp/posts/">
+                            <button class="btn btn-primary" type="submit">Envoyer</button>
+                        </div>
+                    </div>
+                </form>
         <form enctype="multipart/form-data" method="post" name="delete">
             <div class="form-group">
                 <input type="hidden" name="delete" value="delete">
