--- a/src/awebapp/templates/reviews/flux.html
+++ b/src/awebapp/templates/reviews/flux.html
@@ -19,6 +19,7 @@
 <body>
   <main role="main" class="container">
     <div class="row justify-content-md-center">
+        <h2>Salut, {{ user }} !</h2>
         <div class="col col-lg-3">
             <a class="btn btn-lg btn-primary" href="http://127.0.0.1:8000/awebapp/create-ticket" role="button">Demander une critique</a>
         </div>
