modifs front uniquement

--- a/src/awebapp/templates/reviews/create-review-ticket.html
+++ b/src/awebapp/templates/reviews/create-review-ticket.html
@@ -36,20 +36,20 @@
                     <input name="headline" id="title_review">
                 </div>
                 <div>
-                    <h5>Note</h5>
+                    <h5>Note sur 5 : </h5>
                     <span>
                         <input type="radio" id="grade_0" name="rating" value="0">
-                        <label for="grade_0"> 0*</label>
+                        <label for="grade_0"> 0 </label>
                         <input type="radio" id="grade_1" name="rating" value="1">
-                        <label for="grade_1"> 1*</label>
+                        <label for="grade_1"> 1 </label>
                         <input type="radio" id="grade_2" name="rating" value="2">
-                        <label for="grade_2"> 2*</label>
+                        <label for="grade_2"> 2 </label>
                         <input type="radio" id="grade_3" name="rating" value="3">
-                        <label for="grade_3"> 3*</label>
+                        <label for="grade_3"> 3 </label>
                         <input type="radio" id="grade_4" name="rating" value="4">
-                        <label for="grade_4"> 4*</label>
+                        <label for="grade_4"> 4 </label>
                         <input type="radio" id="grade_5" name="rating" value="5">
-                        <label for="grade_5"> 5*</label>
+                        <label for="grade_5"> 5 </label>
                     </span>
                 </div>
                 <div>
