--- a/src/awebapp/templates/reviews/flux.html
+++ b/src/awebapp/templates/reviews/flux.html
@@ -44,7 +44,7 @@
                 {% else %}
                 <div style="border-radius: 10px; border: 2px solid white; background-color: white">
                     <p>Critique</p><br>
-                    <h5>{{ element.headline }} - {{ element.rating }}</h5>
+                    <h5>{{ element.headline }} | avec une note de : {{ element.rating }}★</h5>
                     {{ element.body }}<br>
                     {{ element.time_created }}<br>
                     {{ username }}<br>
