--- a/src/awebapp/templates/reviews/posts.html
+++ b/src/awebapp/templates/reviews/posts.html
@@ -38,7 +38,7 @@
                     <p>Vous avez publié une critique<p><br>
                     <h5>{{ review.headline }}</h5><br>
                     <p>{{ review.body }}</p><br>
-                    <p>La note sur 5 points : {{ review.rating }}*</p><br>
+                    <p>La note sur 5 points : {{ review.rating }}★</p><br>
                     <p>{{ review.time_created }}</p><br>
                     <div class="col p-5" style="border-radius: 10px; border: 2px solid white; background-color:lightgray;color:#444444; margin: 30px">
                         <p>Ticket - Vous</p>
