--- a/src/awebapp/templates/reviews/create-review.html
+++ b/src/awebapp/templates/reviews/create-review.html
@@ -45,26 +45,26 @@
         </div>
         <div id="rating" class="form-check form-check-inline">
             <div class="col-md-2 col-sm-2">
-              <h5>Note</h5>
+              <h5>Note sur 5 : </h5>
             </div>
             <input value="1" class="form-check-input" type="radio" name="rating" id="inlineRadio1">
-            <label class="form-check-label" for="inlineRadio1"> 1*</label>
+            <label class="form-check-label" for="inlineRadio1"> 1★</label>
           </div>
           <div class="form-check form-check-inline">
             <input value="2" class="form-check-input" type="radio" name="rating" id="inlineRadio2" >
-            <label class="form-check-label" for="inlineRadio2"> 2*</label>
+            <label class="form-check-label" for="inlineRadio2"> 2★</label>
           </div>
           <div class="form-check form-check-inline">
             <input value="3" class="form-check-input" type="radio" name="rating" id="inlineRadio3">
-            <label class="form-check-label" for="inlineRadio3"> 3*</label>
+            <label class="form-check-label" for="inlineRadio3"> 3★</label>
           </div>
           <div class="form-check form-check-inline">
             <input value="4" class="form-check-input" type="radio" name="rating" id="inlineRadio4">
-            <label class="form-check-label" for="inlineRadio4"> 4*</label>
+            <label class="form-check-label" for="inlineRadio4"> 4★</label>
           </div>
           <div class="form-check form-check-inline">
             <input value="5" class="form-check-input" type="radio" name="rating" id="inlineRadio5">
-            <label class="form-check-label" for="inlineRadio5"> 5*</label>
+            <label class="form-check-label" for="inlineRadio5"> 5★</label>
           </div>
           <div class="form-group">
             <label for="body" id="body"><h5>Commentaire</h5></label>
